<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>htb_hardware_interfaces</name>
  <version>0.1.0</version>
  <description>Hardware controller for HTB robot</description>
  <license>Apache License 2.0</license>

  <author email="martin.nievas.ar@gmail.com">Martin Nievas</author>

  <maintainer email="martin.nievas.ar@gmail.com">Martin Nievas</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>diff_drive_controller</depend>


  <build_depend>pluginlib</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
